--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Personal
+tst.*
+yen-collection.db
+
 # OSX
 #
 .DS_Store
@@ -72,3 +76,4 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
