--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dependencies": {
         "react": "18.3.1",
         "react-native": "0.75.2",
+        "react-native-element-dropdown": "^2.12.1",
+        "react-native-material-dropdown-v2": "^0.12.0",
+        "react-native-paper": "^5.12.5",
         "react-native-sqlite-storage": "^6.0.1",
         "react-native-table-component": "^1.2.2"
     },
