--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "react": "18.3.1",
         "react-native": "0.75.2",
         "react-native-element-dropdown": "^2.12.1",
+        "react-native-get-random-values": "^1.11.0",
         "react-native-material-dropdown-v2": "^0.12.0",
         "react-native-paper": "^5.12.5",
         "react-native-sqlite-storage": "^6.0.1",
-        "react-native-table-component": "^1.2.2"
+        "react-native-table-component": "^1.2.2",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
@@ -30,6 +32,7 @@
         "@types/react-native-sqlite-storage": "^6.0.5",
         "@types/react-native-table-component": "^1.2.8",
         "@types/react-test-renderer": "^18.0.0",
+        "@types/uuid": "^10.0.0",
         "babel-jest": "^29.6.3",
         "eslint": "^8.19.0",
         "jest": "^29.6.3",
